Actualización: Home por docs

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -10,8 +10,8 @@
 <header>
     <div class="contenedor">
         
-        <div id="logo"><a href="../Home/index.html"><img src="Images/logo_sg.webp"></a></div>
-        <div id="home"><a href="../Home/index.html">Home</a></div>
+        <div id="logo"><a href="../docs/index.html"><img src="Images/logo_sg.webp"></a></div>
+        <div id="home"><a href="../docs/index.html">Home</a></div>
         <div id="desarrollos"><a href="../Desarrollos/index.html">Desarrollos</a></div>
         <div id="ii"><a href="../Inmobiliarias Independientes/index.html">Inmobiliarias Independientes</a></div>
         <div id="contacto"><a href="../contacto/index.html">Contacto</a></div>
